Fix alignment issue of recommendation div

--- a/src/components/recommendation/Recommendation.scss
+++ b/src/components/recommendation/Recommendation.scss
@@ -18,7 +18,7 @@
   gap: 0.5em;
   align-items: center;
   justify-content: center;
-  height: 40vh;
+  height: 45vh;
   position: relative;
   padding-inline: $app-padding-xs;
 }
@@ -59,6 +59,7 @@ button {
 .recommendation_card-container {
   display: flex;
   position: relative;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   max-width: $app-width;
