--- a/src/components/recommendation/RecommendationCard.scss
+++ b/src/components/recommendation/RecommendationCard.scss
@@ -8,7 +8,7 @@
 }
 
 .recommendation-card_bg-img {
-  width: 580px;
+  width: 680px;
   transition: width 1s ease;
   &:hover {
     filter: brightness(0.6);
